# tfdrift

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  demo.py  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/tfdrift/: __init__.py  cli.py  config.py  models.py  severity.py
src/tfdrift/detectors/: drift.py
src/tfdrift/remediators/: fix.py
src/tfdrift/reporters/: output.py
tests/: test_config.py  test_models.py
